--- a/style.css
+++ b/style.css
@@ -9,4 +9,32 @@ header nav {
 	background-color: #84E2FF;
 	width: 100%;
 	height: 3vw;
+	margin-bottom: 4%;
+}
+aside #left {
+	background-color: #84E2FF;
+	width: 20%;
+	height: 40vw;
+
+}
+aside #right {
+	background-color: #84E2FF;
+	width: 15%;
+	height: 40vw;
+}
+aside .containerright #right {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+}
+main .collum1{
+	background-color: black;
+	width: 15%;
+	height: 17vw;
+}
+main .row {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	
 }
