--- a/style2.css
+++ b/style2.css
@@ -15,6 +15,7 @@ header nav {
 main {
 	width: 100%;
 	height: 40vw;
+	margin-bottom: 4%;
 }
 
 main .left {
@@ -22,4 +23,45 @@ main .left {
 	width: 20%;
 	height: 40vw;
 	float: left;
+}
+main .mid {
+	width: 65%;
+	height: 40vw;
+	float: left;
+}
+main .right {
+	background-color: #84E2FF;
+	width: 15%;
+	height: 40vw;
+	float: right;
+}
+footer {
+	background-color: #84E2FF;
+	width: 100%;
+	height: 8.5vw;
+}
+main .mid .container1 {
+	width: 100%;
+	height: 70%;
+	margin-bottom: 4%;
+}
+main .mid .container1 .row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+main .mid .container1 .row .collum {
+	background-color: black;
+	width: 25%;
+	height: 13vw;
+}
+	
+main .mid .container2 {
+	width: 100%;
+	height: 23.7%;
+	background-color: yellow;
+}
+br {
+	height: 60%;
+	width: 100%;
 }
