--- a/style2.css
+++ b/style2.css
@@ -43,7 +43,7 @@ footer {
 main .mid .container1 {
 	width: 100%;
 	height: 70%;
-	margin-bottom: 4%;
+	margin-bottom: 1%;
 }
 main .mid .container1 .row {
 	display: flex;
@@ -59,8 +59,16 @@ main .mid .container1 .row .collum {
 main .mid .container2 {
 	width: 100%;
 	height: 23.7%;
-	background-color: yellow;
 }
+
+.balken {
+	height: 60px;
+	width: 100%;
+	background-color: #84E2FF;
+	display: flex;
+	justify-content: space-around;
+}
+
 br {
 	height: 60%;
 	width: 100%;
